--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
@@ -31,21 +31,30 @@ wird sie neu erstellt und im FractionManager publiziert.
 \subsubsection{Einheitentypen}
 Die Einheitentypen (UnitTypes) geben an, welche verschiedenen Einheiten fachlich zusammen gehören. Beispielsweise sind Dollar und Euro beides Währungen und können damit zusammengerechnet werden. In diesem Fall ist der Einheitentyp Währung und die beiden zugehörigen Einheiten sind Dollar und Euro. Bei Euro und Kilometer hingegen macht es wenig Sinn, diese zu Addieren oder zu Subtrahieren, denn das eine ist eine Währung und das andere eine Strecken-Angabe. Die Multiplikation und Division hingegen können auch auf unterschiedlichen Einheitentypen geschehen, wodurch dann zusammengesetzte Einheitentypen (CompoundUnitTypes) wie Geschwindigkeit (Strecke/Zeit) entstehen.
 
-Zur Verwaltung von UnitTypes und CompoundUnitTypes stellt der UnitTypeManager 7 transaktionale Operationen bereit. Folgende dieser Operationen sind direkt über die Oberfläche erreichbar:
+Zur Verwaltung von UnitTypes und CompoundUnitTypes stellt der UnitTypeManager 8 transaktionale Operationen bereit. Folgende dieser Operationen sind direkt über die Oberfläche erreichbar:
 
 \begin{description}
 \item[createUnitType]
+Diese Operation dient zum Erstellen eines neuen atomaren Einheitentypen. Da jeder Einheitentyp einen eigenen, eindeutigen Namen besitzen muss, wird dieser als Parameter der Operation übergeben. Sollte es schon einen Einheitentyp, egal ob atomar oder zusammengesetzt, mit diesem Namen geben, gibt es eine DoubleDefinitionException.
 \item[fetchScalarType]
+Liefert den skalaren Einheitentyp, welcher aus einem zusammengesetzten Einheitentypen ohne Referenzen auf atomare Typen besteht. 
 \item[changeUTName]
+Mit dieser Operation kann der Name eines Einheitentypen geändert werden. Ebenso wie beim neu erstellen, gibt es auch hier eine DoubleDefinitionException, wenn schon ein Einheitentyp mit diesem Namen existiert.
 \item[addReferenceType]
+Mit dieser Operation kann einem Einheitentypen, egal ob zusammengesetzt oder atomar, eine Referenz auf einen atomaren Einheitentypen hinzugefügt werden. Hierdurch entsteht dann ein zusammengesetzter Einheitentyp. Zusätzlich zu dem zu referenzierenden Einheitentypen muss noch der Exponent der Referenz und der Name des neu entstehenden zusammengesetzten Einheitentypen übergeben werden. Wie bei den anderen beiden Methoden gilt auch hier: ist der Name schon vorhanden, gibt es eine DoubleDefinitionException. Existiert schon ein Einheitentyp mit genau den selben Referenzen, wird kein neuer Einheitentyp erstellt, sondern der vorhandene zurückgegeben.
+\item[setDefaultUnit]
+Diese Methode weist einem atomaren Einheitentypen eine Standard-Einheit zu, die für Umrechnungen in andere Einheiten benötigt wird.
 \end{description}
 
 Folgende Operationen sind für die interne Verarbeitung relevant und können nicht über die Oberfläche aufgerufen werden:
 
 \begin{description}
 \item[getExistingCUT]
+Diese Operation ermittelt an Hand einer Liste von Referenzen, ob schon ein zusammengesetzter Einheitentyp mit genau diesen Referenzen existiert, und, wenn vorhanden, wird er zurückgegeben. 
 \item[fetchCUT]
+Diese Methode prüft zunächst an Hand einer Liste von Referenzen, ob schon ein Einheitentyp mit diesen existiert (dazu wird getExistingCUT verwendet) und legt, wenn nicht vorhanden, diesen neu an. Anschließend wird der Einheitentyp, der durch die übergebenen Referenzen definiert ist, zurückgegeben. Dafür muss auch ein Name übergeben werden, der jedoch nur beim Neu erstellen Verwendung findet. Auch hier gilt: Ist der Name schon vorhanden, gibt es eine DoubleDefinitionException. Diese Methode dient der Vermeidung von doppelt angelegten Einheitentypen.
 \item[fetchReferenceType]
+Diese Operation ermittelt, ob es schon eine Referenz auf einen Einheitentyp mit einem bestimmten Exponenten gibt. Wenn ja, wird sie zurückgegeben, wenn nicht, wird eine neue erstellt. Diese Methode dient der Vermeidung von doppelt angelegten Referenzen auf Einheitentypen.
 \end{description}
 
 
@@ -60,11 +69,11 @@ Folgende dieser Operationen sind direkt über die Oberfläche erreichbar:
 \item[createUnit]
 Diese Operatione dient zum Erstellen einer neuen Unit. Da jede Unit fachlich in einem UnitType typisiert werden und einen Namen haben muss, können dieser Methode diese Werte entsprechend übergeben werden. Eine DoubleDefinitionException wird geworfen, wenn eine Unit mit dem gewählten Namen bereits existiert.
 \item[changeUName]
-Diese Operatione dient zum Umbenennen einer Unit. Auch hier wird die DoubleDefinitionException im doppelten Namensfall geworfen.
+Diese Operation dient zum Umbenennen einer Unit. Auch hier wird die DoubleDefinitionException im doppelten Namensfall geworfen.
 \item[fetchScalar]
 Liefert die eine CompountUnit, die keine Referenzen zu anderen Units aufweist.
 \item[addReference]
-Diese Operation kann sowohl auf Zusammengesetzten Einheiten, als auch auf atomaren Einheiten angewendet werden. Sie dient zum erstellen von CompoundUnits. Analog zur createUnit-Methode wird hier ein Name benötigt. Die entsprechende neue Referenz zur ausgewählten Unit wird durch einen Exponenten definiert. Die DoubleDefinitionException wird auch hier geworfen, falls es zu Namenskonflikten kommt.
+Diese Operation kann sowohl auf zusammengesetzten Einheiten, als auch auf atomaren Einheiten angewendet werden. Sie dient zum erstellen von CompoundUnits. Analog zur createUnit-Methode wird hier ein Name benötigt. Die entsprechende neue Referenz zur ausgewählten Unit wird durch einen Exponenten definiert. Die DoubleDefinitionException wird auch hier geworfen, falls es zu Namenskonflikten kommt.
 \item[setConversion]
 Mittels dieser Operation lässt sich für eine Unit eine Conversion zur aktuellen DefaultUnit des entsprechenden UnitTypes angeben. Die Umrechnungsrate besteht immer aus einem Faktor und einer Konstante. Die Conversion werden im Kapitel \ref{ConversionsKapitel} näher erläutert.
 \end{description}
@@ -73,7 +82,7 @@ Folgende Operationen sind für die interne Verarbeitung relevant und können nic
 \begin{description}
 
 \item[getExistingCU]
-Hier wird anhand einer Liste von vorhandenen Referenzen eine CompoundUnit ermittelt, welche durch genau diese Referenzen definiert ist. Sollte diese Unit noch nicht existieren, wird null zurückgeliefert. Diese Operation dient zum vermeiden von Doppelt anlegten CompoundUnits.
+Hier wird anhand einer Liste von vorhandenen Referenzen eine CompoundUnit ermittelt, welche durch genau diese Referenzen definiert ist. Sollte diese Unit noch nicht existieren, wird null zurückgeliefert. Diese Operation dient zum vermeiden von doppelt angelegten CompoundUnits.
 \item[fetchCU]
 Diese Operation ist ähnlich der getExistingCU()-operation. jedoch wird hierbei die CompoundUnit angelegt, falls sie noch nicht existiert. Die Angabe eines Namens ist erforderlich, falls eine neue CompoundUnit zustande kommen sollte. Auch hier wird entsprechend eine DoubleDefinitionException geworfen, falls eine Unit mit dem gewählten Namen bereits existiert.
 \item[fetchReference]
