doku update observations
git-svn-id: file:///home/nik/repositories/svn/master@577 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/sections/Metamodell.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell.tex
@@ -10,6 +10,11 @@
 \newpage
 \input{\content/sections/Metamodell_Types} % Inhalt einbinden
 
+
+% Kapitel
+\newpage
+\input{\content/sections/Metamodell_Observation} % Inhalt einbinden
+
 % Kapitel
 \newpage
 \input{\content/sections/Metamodell_Operation} % Inhalt einbinden
