removed newline, added empty line.
git-svn-id: file:///home/nik/repositories/svn/master@581 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Operation.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Operation.tex
@@ -14,7 +14,8 @@ Die Operation \textbf{isStatic()} gibt genau dann true zurück, wenn der Quellty
 Zusätzlich zu der Bedingung aus isStatic gilt für die zweite Operation \textbf{isConstant()}, dass die Operation keine Parameter enthalten darf. 
 
 
-\subsubsubsection{OperationManager} \newline
+\subsubsubsection{OperationManager}
+
 Der OperationManager beinhaltet zwei Listen zur Verwaltung von Operationen und Parametern.
 
 \begin{description}
