added label and reference between observation and measurement
git-svn-id: file:///home/nik/repositories/svn/master@582 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Measurement.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Measurement.tex
@@ -2,7 +2,7 @@
 Martin Fowler unterscheidet in seinem Werk \refLibLiteratur{fowler1997analysis} zwischen qualitativen und quantitativen
 Messungen. Wird beispielsweise die Blutgruppe (A, B, AB und 0) eines Menschen typisiert, so handelt es sich um
 eine qualitative Messung. Im Kontext dieses Projekts wird diese Art von Messung als \term{Observation} (siehe Abschnitt
-\ref{Operation:Associationen}) bezeichnet. Unter quantitativen Messungen, bezeichnet als \term{Measurement}, wird
+\ref{Observations}) bezeichnet. Unter quantitativen Messungen, bezeichnet als \term{Measurement}, wird
 beispielsweise das Feststellen der Körpergröße eines Menschen verstanden.
 
 \term{Measurements} (beispielsweise Körpergröße von Hugo Egon Balder: 190cm) werden in Form von Quantitäten bzw.
