--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Observation.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Observation.tex
@@ -1,4 +1,4 @@
-\subsection{Observations}
+\subsection{Observations}\label{Observations}
 Im Gegensatz zum ursprünglichen Modell haben wir uns nach längerer Diskussion dazu entschlossen Observation auszulagern. 
 Das soll zum einen der Übersicht und Transparenz des Modells zu gute kommen und zum anderen, was viel wichtiger ist, 
 die aufwändige Handhabung von Singletons für Observation vermeiden. 
